# MonolithicCoffeeMakerAgent

./: .env.example  .gemini.styleguide.md  .gitgnore  .gitignore  .mcp.json  .pdoc.yml  .pre-commit-config.yaml  AGENTS.md  AGENT_LAUNCH_consolidation.txt  CAUTION-repo-spring-clean  CFR-018-COMPLIANCE-REPORT.md  CLEANUP-001-BREAKDOWN.md  CLEANUP_SUMMARY.md  CODE_CHANGES_REFERENCE.md  COMMAND_CONSOLIDATION_SUMMARY.md  COMMAND_GRANULARITY_ANALYSIS.md  COMMAND_QUICK_REFERENCE.md  COMMAND_REDUNDANCY_ANALYSIS.md  CONSOLIDATED_COMMANDS_IMPLEMENTATION_REPORT.md  CONTEXT_BUDGET_FAILURE_ANALYSIS.md  CONTRIBUTING.md  CRITICAL_FIX_DATABASE_SPEC_LOADING.md  DATABASE_FIRST_ARCHITECTURE_FIX_SUMMARY.md  FINAL_SESSION_REPORT.md  FIX_SUMMARY_DATABASE_SPEC_LOADING.md  GRANULAR_COMMAND_CONTEXT_ANALYSIS.md  HIERARCHICAL_SKILLS_DESIGN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_DATABASE_SPECS.md  IMPLEMENTATION_PLAN_25_COMMANDS.md  PHASE_1_3_COMPLETE_SUMMARY.md  PHASE_1_COMPLETION_SUMMARY.txt  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_PROGRESS_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_TEST_SUMMARY.md  PHASE_4_PLAN.md  PROACTIVE_INTELLIGENCE_REPORT.md  PR_US-021_PHASE_1.md  README.md  (+54 more)
.claude/: AGENT_DELEGATION_RULES.md  CLAUDE.md  command_flags.json  settings.local.json.template
.gemini/: styleguide.md
.github/: pull_request_template.md
coffee_maker/: __init__.py  auto_gemini_styleguide.py  claude_agent_invoker.py  config.py  exceptions.py  process_manager.py
config/: ai_providers.yaml  communication.yaml
data/: architect_integration_status.json  architect_last_review.json  cfr_extraction.json  developer_status.json  last_interaction.json  notifications.db  update_all_command_specs.py
docs/: ACE_AGENT_MIGRATION_SUMMARY.md  ACE_AUTOMATIC_INTEGRATION.md  ACE_COMPLETE_WORKFLOW.md  ACE_CONSOLE_DEMO_TUTORIAL.md  ACE_DEFAULT_INTEGRATION_SUMMARY.md  ACE_DELEGATION_CHAIN_USAGE.md  ACE_DUAL_EXECUTION_VERIFICATION_REPORT.md  ACE_FRAMEWORK_GUIDE.md  ACE_IMPLEMENTATION_COMPARISON.md  ACE_IMPLEMENTATION_TRACKER.md  ACE_PHASE_5_ENHANCEMENTS.md  ACE_QUICK_REFERENCE.md  ACE_STREAMLIT_TESTING_CHECKLIST.md  ACE_STREAMLIT_USER_GUIDE.md  ACE_USER_DEMO_TUTORIAL.md  ADR_001_DATABASE_SYNC_STRATEGY.md  AGENT_ACE_INTEGRATION_PATTERN.md  AGENT_COMMANDS_IMPLEMENTATION_PLAN.md  AGENT_COMMAND_ARCHITECTURE_REVISED.md  AGENT_COMMAND_ARCHITECTURE_SUMMARY.md  (+232 more)
(+2161 files in other folders)
