[tool.poetry]
name = "coffee_maker"
version = "0.1.0"
description = "An agent that roast, grind, brew and serve your coffee. or not..."
authors = ["Bobain and some code agents"]
license = "MIT" # Or your chosen license... NO idea
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mcp = {extras = ["cli"], version = "^1.9.1"} # Example of how mcp[cli] might look
smolagents = "^1.16.1"

[tool.poetry.group.dev.dependencies]
# ...

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
