[tool.poetry]
name = "coffee_maker"
version = "0.0.57"
description = "An agent that roast, grind, brew and serve your coffee. or not..."
authors = ["Bobain and some code agents"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
mcp = {extras = ["cli"], version = "^1.9.0"}
gradio = {extras = ["mcp"], version = "^5.31.0"}
python-dotenv = "^1.1.0"
llama-index = "^0.12.44"
llama-index-llms-ollama = "^0.6.2"
llama-index-tools-mcp = "^0.2.5"
psutil = "^7.0.0"
gitpython = "^3.1.45"
crewai = "^0.193.2"
crewai-tools = "^0.73.1"
langchain-google-genai = "^2.1.12"
langfuse = {version = "^3.5.0", extras = ["crewai", "langchain"]}
pygithub = "^2.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^6.0"
pip-audit = "^2.9"
pre-commit = "^4.0"
pytest-html = "^4.1.1"
pdoc = "^15.0.4"


[tool.poetry.urls]
"Homepage" = "https://github.com/Bobain/MonolithicCoffeeMakerAgent"
"Repository" = "https://github.com/Bobain/MonolithicCoffeeMakerAgent"
"Bug Tracker" = "https://github.com/Bobain/MonolithicCoffeeMakerAgent/issues"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
